--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <a href="semanas/semana7/index.html"><div class="carousel-image">Semana 7</div></a>
       <a href="semanas/semana8/index.html"><div class="carousel-image">Semana 8</div></a>
       <a href="semanas/semana9/index.html"><div class="carousel-image">Semana 9</div></a>
-      <a href="#"><div class="carousel-image">Semana 10</div></a>
+      <a href="semanas/semana10/index.html"><div class="carousel-image">Semana 10</div></a>
       <a href="#"><div class="carousel-image">Semana 11</div></a>
-      <a href="#"><div class="carousel-image">Semana 12</div></a>
+      <a href="semanas/semana12/index.html"><div class="carousel-image">Semana 12</div></a>
       <a href="#"><div class="carousel-image">Semana 13</div></a>
       <a href="#"><div class="carousel-image">Semana 14</div></a>
       <a href="#"><div class="carousel-image">Semana 15</div></a>
