--- a/semanas/semana10/index.html
+++ b/semanas/semana10/index.html
@@ -44,6 +44,12 @@
             <li><a href="../semana10/postman.html">Postman</a></li>
           </ul>
         </li>
+        <li>
+          <a href="#">Semana 12 ▾</a>
+          <ul>
+            <li><a href="../semana12/index.html">CRUD</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </header>
