semana 12 ejemplo crud

--- a/semanas/semana12/index.html
+++ b/semanas/semana12/index.html
@@ -34,6 +34,7 @@
           <a href="#">Semana 12 ▾</a>
           <ul>
             <li><a href="../semana12/index.html">CRUD</a></li>
+            <li><a href="../semana12/crud/index.php">EJEMPLO</a></li>
           </ul>
         </li>
       </ul>
