corrección deerrores de menu

--- a/semanas/semana10/index.html
+++ b/semanas/semana10/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="../../assets/imgs/icon.png">
-  <title>Clase Semana 8 - PHP y MySQL</title>
+  <title>Clase Semana 10 - API's</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../../assets/css/semanas/semana10/style.css">
   <!-- Bootstrap CSS -->
@@ -17,20 +17,6 @@
     <nav>
       <ul>
         <li><a href="../../index.html">Inicio</a></li>
-        <li>
-            <a href="#">Semana 7 ▾</a>
-            <ul>
-                <li><a href="../semana7/index.html">Resumen Semana 7</a></li>
-                <li><a href="../semana7/frontend/formulario.html.html">Formulario Ejemplo</a></li>
-            </ul>
-        </li>
-        <li>
-          <a href="#">Semana 8 ▾</a>
-          <ul>
-            <li><a href="frontend/blog.html">Blog CMS</a></li>
-            <li><a href="simple-blog/index.html">Blog Simple</a></li>
-          </ul>
-        </li>
         <li>
           <a href="#">Semana 9 ▾</a>
           <ul>
