--- a/semanas/semana12/index.html
+++ b/semanas/semana12/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="../../assets/imgs/icon.png">
-  <title>Clase Semana 8 - PHP y MySQL</title>
+  <title>Clase Semana 12 - CRUD</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="../../assets/css/semanas/semana10/style.css">
   <!-- Bootstrap CSS -->
@@ -18,15 +18,9 @@
       <ul>
         <li><a href="../../index.html">Inicio</a></li>
         <li>
-          <a href="#">Semana 9 ▾</a>
-          <ul>
-            <li><a href="../semana9/index.html">Resumen Semana 9</a></li>
-            <li><a href="../semana9/api/patentes-chile.html">API Ejemplo</a></li>
-          </ul>
-        </li>
-        <li>
           <a href="#">Semana 10 ▾</a>
           <ul>
+            <li><a href="../semana10/index.html">Resumen Semana 10</a></li>
             <li><a href="../semana10/postman.html">Postman</a></li>
           </ul>
         </li>
